# wod_vn_framework

./: .gitignore  README.md  make-project.sh  pyproject.toml
.github/: TEMPLATE_SETUP.md
.github/workflows/: ci.yml  renpy-lint.yml  tests.yml
docs/: author-guide.md  demo-chronicle.md
docs/internal/superpowers/plans/: 2026-03-28-renpy-bootstrap.md  2026-03-28-wod-core-engine.md  2026-03-29-documentation.md  2026-03-29-gothic-theme.md  2026-03-29-polish.md  2026-05-29-init-time-preprocessor.md
docs/internal/superpowers/specs/: 2026-03-28-wod-vn-framework-design.md
docs/superpowers/plans/: 2026-03-29-chargen.md  2026-03-29-hud-character-sheet.md
docs/superpowers/specs/: 2026-03-28-renpy-bootstrap-design.md  2026-03-28-wod-vn-framework-design.md  2026-03-29-chargen-design.md  2026-03-29-hud-character-sheet-design.md
game/: 00_wod_preprocess.rpy  chronicle.rpy  gui.rpy  images.rpy  options.rpy  screens.rpy  script.rpy  wod_init.rpy
game/demo/: elena.yaml  soraya.yaml
game/images/: manifest.yaml
game/splats/mage/: chargen.yaml  manifest.yaml  resources.yaml  schema.yaml
game/wod_core/: __init__.py  __main__.py  chargen.py  engine.py  gating.py  loader.py  menus.py  migrations.py  preprocess.py  resources.py  syntax.py
game/wod_screens/: character_sheet.rpy  chargen.rpy  resource_hud.rpy  toast.rpy
tests/: conftest.py  test_chargen.py  test_engine.py  test_gating.py  test_integration.py  test_loader.py  test_menus.py  test_migrations.py  test_paradigm.py  test_preprocess.py  test_resources.py  test_syntax.py  test_template_resonance.py
(+17 files in other folders)
