[project]
name = "wod-vn-framework"
version = "0.1.0"
description = "World of Darkness Visual Novel Framework for Ren'Py"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["game"]
